--- a/packages/components/src/menu/menu.css
+++ b/packages/components/src/menu/menu.css
@@ -41,7 +41,9 @@
       padding-block: var(--eds-spacing-inset-md-inline);
       padding-inline: var(--eds-spacing-inset-md-stack-squared);
       width: auto;
-      gap: 0.618em;
+    /*spacing between icon and text should be font-size * 0.618 according to EDS 2.0 Spacing & Typography Documentation.
+    Rounding to nearest 0.5px yields the exact same values as the --eds-spacing-icon tokens */
+    gap: round(0.618em, 0.5px);
       display: flex;
       grid-auto-flow: column;
       grid-auto-columns: max-content auto max-content;
